# cygni

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile  Guardfile  blink.cpp  boundedrand.h  boundedvalue.h  cygni.ino  driver.h  effect-set.h  grid.cpp  grid.h  hue.h  matrix.h  octo-driver.cpp  octo-driver.h  pin13.h  platform.h  rgb.h  util.h  vector.h
cmake/: teensy-arm.toolchain.cmake
drivers/: octo-driver.cpp  octo-driver.h  spi-driver.cpp  spi-driver.hpp
effects/: cedar.h  cedar.hpp  chase.h  chase.hpp  effect.h  effect.hpp  nightsky.h  nightsky.hpp  perseids.h  perseids.hpp  rain.h  rain.hpp  shift.h  shift.hpp  spectrum.h  spectrum.hpp  spin.h  spin.hpp  stutter.h  stutter.hpp  trunk.h  trunk.hpp  willow.h  willow.hpp  zig.h  zig.hpp
exe/: burn-in.cpp  dmx-recv.cpp  dmx-transmit.cpp  huron.cpp  lightblade.cpp  main.cpp  octo-pin-pulse.cpp  octo-pin-steady.cpp
lib/include/cygni/: effect-set.hpp  effects.hpp  environment.hpp  hcl.hpp  hue.hpp  pixel.hpp  rgb.hpp
lib/include/cygni/effects/: autumn.hpp  cedar.hpp  chase.hpp  effect.hpp  nightsky.hpp  periodic-split.hpp  periodic.hpp  perseids.hpp  rain.hpp  shift.hpp  sparks.hpp  spectrum.hpp  spin.hpp  stutter.hpp  trunk.hpp  wanderer.hpp  willow.hpp  zig-fade.hpp  zig.hpp
lib/include/cygni/util/: boundedrand.hpp  boundedvalue.hpp  range.hpp
lib/include/hardware/: pixel-relay.hpp
lib/src/: hcl.cpp  rgb.cpp
outputs/: octo-output.h  output.h  spi-output.hpp
test/: CMakeLists.txt  test_boundedvalue.cpp  test_effect-set.cpp  test_grid.cpp  test_main.cpp  test_matrix.cpp  test_rgb.cpp  test_vector.cpp
